# PDL-AI

./: .cache_ggshield  .dockerignore  .env  .example.env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  bot.py  docker-compose.yml  docker.sh  main.py  pyproject.toml  readme.md  requirements.txt  run.py  start.bat  upload.txt
.bêta/: speech.py  speechio.py  vocram.py
.github/: SECURITY.md
.github/workflows/: auto-releases.yml
.test/: lavalink-test.py
.tests/: music-local.py  speechio.py  vocram.py
archive/docs/: tuto.py
bot/: bot.py
cluster/: semantic_utils.py  vram.py
cluster/chat/: thread.json
cluster/temp/: thread.json
commands/admin/: debug.py  empty.py  host.py  remove.py  restart.py  set.py
commands/admin/custom/: interact.py
commands/custom/: interact.py
commands/public/: help.py  ping.py  set.py
config/: cloud.py  settings.py
core/: client.py  commands.py  validation.py
discord/ext/extras/: speechrecognition.py
discord/ext/recorder/: __init__.py  buffer.py  reader.py  sinks.py  (+3 more)
discord/extras/: localplayback.py
home/cluster/: rom.json  vram.py
home/core/: client.py  main.py
ia/: knowledge.json  loader.py  nlp.py
ia/server/: buffer.json  cloud.json
lavalink/: application.yml
plugins/: ocr.py  speechio.py  voc.py
plugins/analyze/: cse.py  ocr.py  speechio.py
plugins/manage/: db.py  vms.py
plugins/utils/: dic.py
test/: filter.py  music.md  test.txt
tests/: cmds.py  music.py  speaker.py  test_speechio.py
tools/: cleaner.py  db.py  ldb.py  ocr.py  pve.py
tools/plugin/: dbloader.py
vram/: vram.py
(+4 files in other folders)
